feat: add delete post method
